Actions
Bug #12335
closedloader: can not load zero sized file
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
To be exact, the UEFI version of loader can not load zero sized file, because UEFI memory allocator can not allocate 0 pages of memory.
Testing done: load -t file /test (empty file) before and after patch + boot. confirmed the fix.
Updated by Electric Monk about 2 years ago
- Status changed from New to Closed
- % Done changed from 90 to 100
git commit 873f5d0769a5334a9dfb27cf8a5174e25ae4418e
commit 873f5d0769a5334a9dfb27cf8a5174e25ae4418e Author: Toomas Soome <tsoome@me.com> Date: 2020-02-24T19:07:16.000Z 12335 loader: can not load zero sized file Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Jorge Schrauwen <jorge@blackdot.be> Approved by: Dan McDonald <danmcd@joyent.com>
Actions