12335 loader: can not load zero sized file Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Jorge Schrauwen <jorge@blackdot.be> Approved by: Dan McDonald <danmcd@joyent.com>